# s3-analyzer

./: .gitignore  Makefile  README.md  pyproject.toml  results.json
src/s3_analyzer/: cli.py
src/s3_analyzer/core/: analyzer.py
src/s3_analyzer/utils/: aws.py  exceptions.py  logging.py
tests/: test_analyzer.py
